fixed grid spacing for impact section

--- a/site/styles.css
+++ b/site/styles.css
@@ -206,9 +206,9 @@ h2 {
 .impact {
     padding: 100px;
     background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 2fr 50%;
+    grid-column-gap: 10%;
 }
 
 .impact-circle {
@@ -225,18 +225,29 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    padding: 30px;
 }
 
 .gray-line {
-    height: 10px;
-    color: gray;
-    width: 20px;
+    height: 5px;
+    background-color: gray;
+    width: 100px;
 }
 
-.impact-description {
-    display: flex;
-    flex-direction: row;
-    padding-left: 50px;
+.stats {
+    width: 200px;
+    text-align: center;
+    box-shadow: black;
+    height: 50spx
+}
+
+.impact-highlights {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 200px;
+    padding: 40px;
+    grid-gap: 50px;
+    grid-row-gap: 150px
 }
 
 .month-in-review {
